--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-dom": "16.0.4",
     "antd-mobile": "2.1.6",
     "axios": "0.18.0",
+    "classnames": "^2.2.5",
     "echarts": "4.0.4",
     "font-awesome": "4.7.0",
     "izitoast": "1.2.0",
@@ -15,13 +16,14 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
+    "react-scripts": "1.0.14",
     "react-scripts-ts": "2.13.0",
     "rxjs": "5.5.6"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-app-rewired start --scripts-version react-scripts-ts",
+    "start-js": "set port=3001 && react-app-rewired start --scripts-version react-scripts-ts",
     "start": "cross-env NODE_ENV=prod npm-run-all cp-environment -p watch-css start-js",
     "startDev": "cross-env NODE_ENV=dev npm-run-all cp-environment -p watch-css start-js",
     "startLocal": "cross-env NODE_ENV=local npm-run-all cp-environment -p watch-css start-js",
