--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "0.18.0",
     "classnames": "2.2.5",
     "echarts": "4.0.4",
+    "fine-uploader": "5.16.2",
     "font-awesome": "4.7.0",
     "izitoast": "1.2.0",
     "node-sass-chokidar": "1.0.1",
@@ -15,9 +16,11 @@
     "npm-run-all": "4.1.2",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.14",
     "react-scripts-ts": "2.13.0",
+    "redux": "^3.7.2",
     "rxjs": "5.5.6"
   },
   "scripts": {
